hphp/hack/test/typecheck/new_inference/tconst/tconst_on_generics4.php.exp
File "tconst_on_generics4.php", line 32, characters 10-11:
Invalid return type (Typing[4110])
File "tconst_on_generics4.php", line 26, characters 16-18:
Expected int
File "tconst_on_generics4.php", line 13, characters 18-23:
But got string
File "tconst_on_generics4.php", line 21, characters 76-76:
resulting from accessing the type constant 'T'
File "tconst_on_generics4.php", line 27, characters 12-20:
on an object of exactly the class StringBox
